--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,17 @@
-version: "3.3"
-services:
- asir_bind9:
-   image: internetsystemsconsortium/bind9:9.16
-   ports:
-     - 53:53
-   networks:
-     - br02
-   volumes:
-     - conf2:/etc/bind
- asir_cliente:
-   image: ubuntu
-   networks:
-     - br02
-   stdin_open: true  # docker run -i
-   tty: true         # docker run -t
-   dns:
-     - 172.19.0.3
-volumes:
- conf2:
+version: "2.2"
 
-networks:
-  br02:
-    external: true 
+services:
+  asir_bind9:
+    image: internetsystemsconsortium/bind9:9.16
+    ports:
+      - 53:53
+    volumes:
+      - conf:/etc/bind
+  asir_cliente:
+    image: ubuntu
+    stdin_open: true  # docker run -i
+    tty: true         # docker run -t
+volumes:
+  conf:
+      external: true # tenemos que tenerlo previamente o crearlo
+
